# pihomi-server

./: CMakeLists.txt  README.md
src/: NTPClient.cpp  NTPClient.h  client.cpp  client.hpp  controller.hpp  devices.cpp  devices.hpp  main.cpp  serial.hpp  server.cpp  server.hpp  timer.cpp  timer.hpp
